# customExtraction

./: .gitignore  HRRR_22107_LA_202104daily_monthly.csv  README.md  a.out
myFiles/: 2-8.ipynb  CMakeLists.txt  a.out  combine_counties.py  extractWRFData  extractWRFData(upd).cpp  extractWRFData.cpp  extractWRFData.py  extractWRFData1  extractWRFData1.cpp  extractWRFData2.cpp  extractWRFData3  extractWRFData3.cpp  full_preprocessing.py  full_preprocessing_byCounty.py  full_preprocessing_byState.py  geo_grid_recent.py  get_data_offEx.cpp  grib_print_data.cpp  herbie_output.txt  manyCountyInfoExtraction2  manyCountyInfoExtraction2.cpp  manyCountyInfoExtraction3.cpp  processWRF_cpp.py  processWRF_cpp_herb_nodown.py  processWRF_cpp_herbie.py  py_threads.py  readfromfile  readfromfile.cpp  scratch  scratch.cpp  test1  test1.cpp  threadedExtractCountyInfo.cpp  threadedExtractWRFData  threadedExtractWRFData.cpp  threadedExtractWRFData1  threadedExtractWRFData1.cpp  threadedExtractWRFDataCpy  threadedExtractWRFDataDEMO.cpp  (+3 more)
myFiles/CUDA/: CUDAREADME  cpp_test.cpp  cudaManyCountyInfoExtraction1.cu  cuda_extraction1.cu  eccodes_config.h  grib_api.h
myFiles/Documentation_5-28/: documentation_5-28.ipynb  fudong_profiling.txt
myFiles/Tests/: add  combine_counties.py  countLines.py  cuda  cuda_test_0.cu  eccodes_ex.cpp  importGribTest.cpp  py_threads.py  pygrib_ex.py  read_precip_wrf  read_precip_wrf.cpp  scratch.py  seek_test.c
myFiles/WRFoutput/: wrfOutput-copy.csv  wrfOutput.csv
myFiles/countyInfo/: countyFipsCodes.txt  countyFipsandCoordinates.csv  geo_grid-edit.py  getMonthlyAvgs.py  getParameters  getParameters.cpp  manyCountyInfo-broken.cpp  manyCountyInfoExtraction1  manyCountyInfoExtraction1.cpp  nospaces.py  parameterInfo.csv  readfromfile.cpp  singleCountyInfo  singleCountyInfo.cpp  singleCountyInfo2  singleCountyInfo2.cpp  singleCountyInfo_biweekly  singleCountyInfo_biweekly.cpp  singleCountyInfo_biweekly2  (+5 more)
(+429 files in other folders)
